--- a/main.html
+++ b/main.html
@@ -8,9 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<h1>Welcome to Accio Jobs!</h1>
+	<div>
+		<a href="https://acciojob.com/blog/" Blog>
+			<img height="200" src="https://storage.googleapis.com/acciojob-open-file-collections/4b1e3a39-a42d-4488-95d7-b08b6d779c01_Screenshot%202023-08-18%20at%205.46.58%20PM.png">
+			<a href="https://acciojob.com/blog/brute-force-vs-optimization/">
+				<p>We can say that optimization is....</p>
+				</div>
+		<div>
+					<a href="https://acciojob.com/blog/" Blog>
+						<img height="200" src="https://storage.googleapis.com/acciojob-open-file-collections/4b1e3a39-a42d-4488-95d7-b08b6d779c01_Screenshot%202023-08-18%20at%205.46.58%20PM.png">
+						<a href="https://acciojob.com/blog/brute-force-vs-optimization/">
+							<p>DSA or Competitive programming?....</p>
+		</div>
+							<div>
+								<a href="https://acciojob.com/blog/" Blog>
+									<img height="200" src="https://storage.googleapis.com/acciojob-open-file-collections/4b1e3a39-a42d-4488-95d7-b08b6d779c01_Screenshot%202023-08-18%20at%205.46.58%20PM.png">
+									<a href="https://acciojob.com/blog/untitled-19/">
+										<p>As a job seeker, you may wonder....</p>
+							</div>
 </body>
 
 </html>
