--- a/main.html
+++ b/main.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>AccioJob Blog</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<div class="container">
-		<h1>Welcome to Accio Jobs!</h1>
-		<a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
-		<br />
-		<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" alt="pic"  height="200px"/>
-		<a href="https://acciojob.com/blog/brute-force-vs-optimization/"><h1>Brute Force vs. Optimization</h1></a>
-		<p>We can say that optimization is one step further than the brute-force method of problem solving...</p>
-		<br />
-		<img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" alt="pic" height="200px" />
-		<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><h1>DSA vs. Competitive Programming</h1></a>
-		<p>DSA or Competitive programming? What is better for you? Questions such as these often put you in a...</p>
-		<br/>
-		<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="pic" height="200px" />
-		<a href="https://acciojob.com/blog/untitled-19/"><h1>Complete Guide on FlexBox</h1></a>
-		<p>As a job seeker, you may wonder how to make your LinkedIn profile stand out to recruiters. Your LinkedIn...</p>
-	</div>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <marquee><h1>Welcome to Accio Jobs!</h1></marquee>
+        <a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
 
+        <h3>Articles</h3>
+        <ol>
+            <li>
+                <h4>Brute Force vs. Optimization</h4>
+                <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" alt="Brute Force vs. Optimization" height="200">
+                <a href="https://acciojob.com/blog/brute-force-vs-optimization/">Read More</a>
+                <p>We can say that optimization is...</p>
+            </li>
+            <li>
+                <h4>DSA vs. Competitive Programming</h4>
+                <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" alt="DSA vs. Competitive Programming" height="200">
+                <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">Read More</a>
+                <p>DSA or Competitive programming?...</p>
+            </li>
+            <li>
+                <h4>Complete Guide on FlexBox</h4>
+                <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="Complete Guide on FlexBox" height="200">
+                <a href="https://acciojob.com/blog/untitled-19/">Read More</a>
+                <p>As a job seeker, you may wonder...</p>
+            </li>
+        </ol>
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
