--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
             </li>
             <li>
                 <h4>Complete Guide on FlexBox</h4>
-                <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="Complete Guide on FlexBox" height="200">
+                <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="Complete Guide on FlexBox" height="200px">
                 <a href="https://acciojob.com/blog/untitled-19/">Read More</a>
                 <p>As a job seeker, you may wonder...</p>
             </li>
